unpackaged/main/default/objects/litify_pm__lit_AT_Child__c/litify_pm__lit_AT_Child__c.object-meta.xml
<CustomObject>
    <label>AT Child</label>
    <nameField>
        <label>AT Child Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AT Children</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>