unpackaged/main/default/objects/litify_pm__lit_AT_Child__c/fields/litify_pm__lit_Allow_Record_Create__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Allow_Record_Create__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Allow Record Create</label>
    <type>Checkbox</type>
</CustomField>