unpackaged/main/default/objects/litify_pm__lit_AT_Child__c/fields/litify_pm__lit_Allow_Record_Edit__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Allow_Record_Edit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Record Edit</label>
    <type>Checkbox</type>
</CustomField>