unpackaged/main/default/objects/litify_pm__lit_AT_Child__c/fields/litify_pm__lit_AT_Child_Global_Setting__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_AT_Child_Global_Setting__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AT Child Global Setting</label>
    <referenceTo>litify_pm__lit_AT_Child_Global_Setting__c</referenceTo>
    <relationshipLabel>AT Specific Children</relationshipLabel>
    <relationshipName>lit_AT_Specific_Children</relationshipName>
    <type>Lookup</type>
</CustomField>