unpackaged/main/default/objects/litify_pm__lit_AT_Child__c/fields/litify_pm__lit_AT_Timeline_View__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_AT_Timeline_View__c</fullName>
    <label>AT Timeline View</label>
    <referenceTo>litify_pm__lit_AT_Timeline_View__c</referenceTo>
    <relationshipLabel>AT Children</relationshipLabel>
    <relationshipName>lit_AT_Children</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>