unpackaged/main/default/objects/litify_pm__lit_AT_Child__c/fields/litify_pm__lit_Relationship_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__lit_Relationship_Field_API_Name__c</fullName>
    <label>Relationship Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>